[package]
name = "rustgit"
version = "1.1.1"
authors = ["Dan Farino <dan.farino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.15.0", default-features = false }
regex = "1.6.0"
chrono = "0.4.22"
clap = "3.2.22"
anyhow = "1.0.65"
atty = "0.2.14"
glob = "0.3.0"
dirs = "4.0.0"
shellexpand = "2.1.2"
