[package]
name = "rustgit"
version = "1.1.2"
authors = ["Dan Farino <dan.farino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.16.1", default-features = false }
regex = "1.7.1"
chrono = "0.4.24"
clap = "3.2.23"
anyhow = "1.0.69"
atty = "0.2.14"
glob = "0.3.1"
dirs = "4.0.0"
shellexpand = "3.0.0"
