[package]
name = "rustgit"
version = "1.1.2"
authors = ["Dan Farino <dan.farino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.19.0", default-features = false }
regex = "1.11.0"
chrono = "0.4.38"
clap = "3.2.25"
anyhow = "1.0.89"
atty = "0.2.14"
glob = "0.3.1"
dirs = "5.0.1"
shellexpand = "3.1.0"
